create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2734,3 +2734,577 @@ body {
     padding-left: 30px;
   }
 }
+.cid-qxgG9Fo6vX .navbar {
+  background: #149dcc;
+  transition: none;
+  min-height: 77px;
+  padding: .5rem 0;
+}
+.cid-qxgG9Fo6vX .navbar-dropdown.bg-color.transparent.opened {
+  background: #149dcc;
+}
+.cid-qxgG9Fo6vX a {
+  font-style: normal;
+}
+.cid-qxgG9Fo6vX .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  top: -0.2em;
+  text-decoration: none;
+}
+.cid-qxgG9Fo6vX .nav-item a {
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+}
+.cid-qxgG9Fo6vX .btn {
+  padding: 0.4rem 1.5rem;
+  display: inline-flex;
+  align-items: center;
+}
+.cid-qxgG9Fo6vX .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-qxgG9Fo6vX .menu-logo {
+  margin-right: auto;
+}
+.cid-qxgG9Fo6vX .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+}
+.cid-qxgG9Fo6vX .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-qxgG9Fo6vX .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-qxgG9Fo6vX .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-qxgG9Fo6vX .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-qxgG9Fo6vX .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-qxgG9Fo6vX .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-qxgG9Fo6vX .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-qxgG9Fo6vX .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-qxgG9Fo6vX .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-qxgG9Fo6vX .dropdown .dropdown-menu {
+  background: #149dcc;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-qxgG9Fo6vX .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-qxgG9Fo6vX .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-qxgG9Fo6vX .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-qxgG9Fo6vX .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-qxgG9Fo6vX .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-qxgG9Fo6vX .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-qxgG9Fo6vX .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-qxgG9Fo6vX .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-qxgG9Fo6vX .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-qxgG9Fo6vX .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-qxgG9Fo6vX .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-qxgG9Fo6vX button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-qxgG9Fo6vX button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-qxgG9Fo6vX button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #333333;
+}
+.cid-qxgG9Fo6vX button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-qxgG9Fo6vX button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qxgG9Fo6vX button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qxgG9Fo6vX button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-qxgG9Fo6vX nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qxgG9Fo6vX nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-qxgG9Fo6vX nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-qxgG9Fo6vX nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qxgG9Fo6vX .collapsed.navbar-expand {
+  flex-direction: column;
+}
+.cid-qxgG9Fo6vX .collapsed .btn {
+  display: flex;
+}
+.cid-qxgG9Fo6vX .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-qxgG9Fo6vX .collapsed .navbar-collapse.collapsing,
+.cid-qxgG9Fo6vX .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-qxgG9Fo6vX .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-qxgG9Fo6vX .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-qxgG9Fo6vX .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-qxgG9Fo6vX .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-qxgG9Fo6vX .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-qxgG9Fo6vX .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-qxgG9Fo6vX .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-qxgG9Fo6vX .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-qxgG9Fo6vX .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-qxgG9Fo6vX .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-qxgG9Fo6vX .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-qxgG9Fo6vX .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-qxgG9Fo6vX .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-qxgG9Fo6vX .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-qxgG9Fo6vX .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-qxgG9Fo6vX.navbar-expand {
+    flex-direction: column;
+  }
+  .cid-qxgG9Fo6vX img {
+    height: 3.8rem !important;
+  }
+  .cid-qxgG9Fo6vX .btn {
+    display: flex;
+  }
+  .cid-qxgG9Fo6vX button.navbar-toggler {
+    display: block;
+  }
+  .cid-qxgG9Fo6vX .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-qxgG9Fo6vX .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-qxgG9Fo6vX .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-qxgG9Fo6vX .navbar-collapse.collapsing,
+  .cid-qxgG9Fo6vX .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-qxgG9Fo6vX .navbar-collapse.collapsing .navbar-nav,
+  .cid-qxgG9Fo6vX .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-qxgG9Fo6vX .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-qxgG9Fo6vX .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-qxgG9Fo6vX .navbar-collapse.collapsing .navbar-buttons,
+  .cid-qxgG9Fo6vX .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-qxgG9Fo6vX .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-qxgG9Fo6vX .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-qxgG9Fo6vX .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-qxgG9Fo6vX .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-qxgG9Fo6vX .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-qxgG9Fo6vX .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-qxgG9Fo6vX .menu-logo {
+    flex-shrink: 0;
+  }
+}
+.cid-qBQONskCUl {
+  background-image: url("../../../assets/images/jumbotron.jpg");
+}
+.cid-qBQOOHwyCK {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/background3.jpg");
+}
+.cid-qBQOOHwyCK .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qBQOPXbB9D {
+  background-image: url("../../../assets/images/03.jpg");
+}
+.cid-qBQOPXbB9D .icons-media-container {
+  display: flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+  flex-direction: row;
+  -webkit-flex-direction: row;
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-top: 4rem;
+}
+.cid-qBQOPXbB9D .icons-media-container .mbr-iconfont {
+  font-size: 96px;
+  color: #ffffff;
+}
+.cid-qBQOPXbB9D .icons-media-container .icon-block {
+  padding-bottom: 1rem;
+}
+.cid-qBQOPXbB9D .mbr-text {
+  color: #ffffff;
+}
+.cid-qBQOPXbB9D .card {
+  padding-bottom: 1.5rem;
+}
+.cid-qBQOQJsVX2 {
+  background-image: url("../../../assets/images/background3.jpg");
+}
+.cid-qBQOQJsVX2 .mbr-icofont {
+  font-size: 48px;
+  color: #353535;
+}
+.cid-qBQOQJsVX2 .show-modal span {
+  cursor: pointer;
+  background-color: #ffffff;
+  border-radius: 50%;
+  width: 6rem;
+  height: 6rem;
+  position: relative;
+  display: inline-block;
+  transition: all 0.25s;
+}
+.cid-qBQOQJsVX2 .show-modal span:before {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+}
+.cid-qBQOQJsVX2 .mbr-figure {
+  width: 100px;
+  height: 100px;
+  margin-bottom: 10px;
+  margin: auto;
+  transition: transform 1s;
+  cursor: pointer;
+}
+.cid-qBQOQJsVX2 .mbr-figure a {
+  width: 100px;
+  height: 100px;
+  line-height: 100px;
+  font-size: 100px;
+}
+.cid-qBQOQJsVX2 .mbr-figure a:before {
+  width: 100px;
+  height: 100px;
+}
+.cid-qBQOQJsVX2 .mbr-figure:hover {
+  transform: scale(1.15);
+  transition: transform 1s;
+}
+.cid-qBQOQJsVX2 .mbri-play:before {
+  left: 55% !important;
+}
+.cid-qBQOQJsVX2 .form-inline {
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-qBQOQJsVX2 .form-inline .form-group {
+  padding: 0.5rem;
+}
+.cid-qBQOQJsVX2 .form-inline input {
+  text-align: center;
+}
+.cid-qBQOQJsVX2 h3 {
+  color: #ffffff;
+  text-align: center;
+  font-weight: 300;
+}
+.cid-qBQOQJsVX2 .modalWindow {
+  position: fixed;
+  z-index: 5000;
+  display: none;
+  left: 0;
+  top: 0;
+  background-color: rgba(61, 61, 61, 0.65);
+  width: 100%;
+  height: 100%;
+}
+.cid-qBQOQJsVX2 .modalWindow .modalWindow-container {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: -o-center;
+}
+.cid-qBQOQJsVX2 .modalWindow .modalWindow-container .modalWindow-video-container {
+  display: inline-block;
+  width: 100%;
+}
+.cid-qBQOQJsVX2 .modalWindow .modalWindow-container .modalWindow-video-container .modalWindow-video {
+  margin: auto;
+}
+.cid-qBQOQJsVX2 a.close {
+  position: absolute;
+  right: 4vw;
+  top: 4vh;
+  color: #ffffff;
+  z-index: 5000000;
+  font-size: 37px;
+  background: #000;
+  padding: 20px;
+  border-radius: 50%;
+}
+.cid-qBQOQJsVX2 a.close:hover {
+  color: #ffffff;
+}
+@media (max-width: 500px) {
+  .cid-qBQOQJsVX2 .modalWindow-video {
+    width: 80%;
+    height: 200px;
+    position: relative;
+  }
+}
+@media (min-width: 500px) and (max-width: 768px) {
+  .cid-qBQOQJsVX2 .modalWindow-video {
+    width: 90%;
+    height: 340px;
+    position: relative;
+  }
+}
+@media (min-width: 768px) and (max-width: 850px) {
+  .cid-qBQOQJsVX2 .modalWindow-video {
+    width: 700px;
+    height: 395px;
+    position: relative;
+  }
+}
+@media (min-width: 850px) and (max-width: 1300px) {
+  .cid-qBQOQJsVX2 .modalWindow-video {
+    width: 800px;
+    height: 452px;
+    position: relative;
+  }
+}
+@media (min-width: 1300px) {
+  .cid-qBQOQJsVX2 .modalWindow-video {
+    width: 1200px;
+    height: 675px;
+    position: relative;
+  }
+}
+.cid-qBQOTvvwWc {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #f9f9f9;
+}
+.cid-qBQOTvvwWc .card-box {
+  background-color: #ffffff;
+  padding: 2rem;
+}
+.cid-qBQOTvvwWc h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-qBQOTvvwWc p {
+  color: #767676;
+  text-align: left;
+}
+.cid-qBQOTvvwWc .card-wrapper {
+  position: relative;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-qBQOTvvwWc .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-qBQOTvvwWc .card-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+}
